--- a/internal-ingress.yaml
+++ b/internal-ingress.yaml
@@ -3,4 +3,4 @@ controller:
     #loadBalancerIP: 192.168.0.71    
     annotations:
       service.beta.kubernetes.io/azure-load-balancer-internal: "true"
-      service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "AKS-SN" #change to your subnet  
+      service.beta.kubernetes.io/azure-load-balancer-internal-subnet: $AKS_LOADBALANCER_SUB_NET #change to your subnet  
